--- a/tensorflow_api/templates/tensorflow_api/index.html
+++ b/tensorflow_api/templates/tensorflow_api/index.html
@@ -1,38 +1,81 @@
-{% load render_table from django_tables2 %}
 <!DOCTYPE html>
 <html>
 <head>
 	<title>lyubomirs bachelors</title>
-	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-	<style type="text/css">
-		.label{ 
-		    display: none;
-		    color: inherit;
-		    text-align: left;
-		    font-size: 100%;
-		    font-weight: normal;
-		    border-radius: 0;
-		}
-	</style>
+	<link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.3.1026/styles/kendo.common-material.min.css" />
+	<link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.3.1026/styles/kendo.material.min.css" />
+	<link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.3.1026/styles/kendo.material.mobile.min.css" />
+	<script src="https://kendo.cdn.telerik.com/2017.3.1026/js/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://kendo.cdn.telerik.com/2017.3.1026/js/kendo.all.min.js"></script>
+	<style type="text/css" media="screen">
+</style>
 </head>
 <body>
-
-<div>
-	{% render_table table %}
-</div>
-
-<div>
-	please select a file to scan
-	<form action="{% url 'tensorflow_api:scan' %}" method="post" enctype="multipart/form-data">
-		{% csrf_token %}
-		<input type="file" name="image">
-		<button type="submit">scan image</button>
-	</form>
-</div>
-
-
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8">
+				<div id="items-grid"></div>
+			</div>
+			<div class="col-md-4">
+				please select a file to scan
+				<form action="{% url 'tensorflow_api:scan' %}" method="post" enctype="multipart/form-data">
+					{% csrf_token %}
+					<input type="file" name="image">
+					<button type="submit">scan image</button>
+				</form>
+			</div>
+		</div>
+	</div>
+	<script>
+		$(function(){
+			$("#items-grid").kendoGrid({
+				dataSource: {
+					transport: {
+						read: "/tensorflow_api/items",
+					},
+					schema: { total: "total", data: "data" },
+					pageSize:10,
+				},
+				height:500,
+				filterable: true,
+				pageable: {
+					input: true,
+					numeric: false
+				},
+				sortable: true,
+				columns: [{
+					field: "label",
+					title: "labeled as",
+				}, {
+					field: "scanned_on",
+					title: "date",
+					template: "#= kendo.toString(kendo.parseDate(scanned_on), 'on dd/MM/yyyy at HH:mm') #"
+				}, {
+					field: "probability",
+					title: "probability",
+					format: "{0:c}%",
+				}]
+			});
+		});
+	</script>
 </body>
 </html>
