--- a/tensorflow_api/templates/tensorflow_api/index.html
+++ b/tensorflow_api/templates/tensorflow_api/index.html
@@ -59,11 +59,13 @@
 				</ul>
 			</div>
 			<div class="col-md-3">
-				
-				<h4>Please select a file to scan</h2>
+				<h4 class="text-center">Please select a file to scan</h2>
 				<form action="{% url 'tensorflow_api:scan' %}" method="post" enctype="multipart/form-data">
-					<input type="file" id="image" name="image">
-					<button class="k-button" type="submit">scan image</button>
+					<div class="text-center">
+						<input type="file" id="image" name="image">
+						<br>
+						<button class="k-button" type="submit">scan image</button>
+					</div>
 				</form>
 			</div>
 			<br>
@@ -90,7 +92,7 @@
 					schema: { total: "total", data: "data" },
 					pageSize:10,
 				},
-				height:430,
+				height:440,
 				filterable: true,
 				pageable: {
 					input: true,
