return only one item from the scanner and get 5 decimal places on a number

--- a/tensorflow_api/templates/tensorflow_api/index.html
+++ b/tensorflow_api/templates/tensorflow_api/index.html
@@ -128,7 +128,7 @@
 				}, {
 					field: "probability",
 					title: "Probability",
-					format: "{0:c}%",
+					template: "#= probability # %",
 					width:130,
 				}]
 			});
