fix date template and remove unused urls

--- a/tensorflow_api/templates/tensorflow_api/index.html
+++ b/tensorflow_api/templates/tensorflow_api/index.html
@@ -123,7 +123,7 @@
 				}, {
 					field: "scanned_on",
 					title: "<div class='text-center'>Scanned on</div>",
-					template: "<div class='text-center'>#= kendo.toString(kendo.parseDate(scanned_on), 'on dd/MM/yyyy at HH:mm') #</div>"
+					template: "<div class='text-center'>#= kendo.toString(kendo.parseDate(scanned_on), 'dd/MM/yyyy at HH:mm') #</div>"
 				}, {
 					field: "probability",
 					title: "Probability",
