--- a/tensorflow_api/templates/tensorflow_api/index.html
+++ b/tensorflow_api/templates/tensorflow_api/index.html
@@ -9,7 +9,6 @@
 	<script src="https://kendo.cdn.telerik.com/2017.3.1026/js/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://kendo.cdn.telerik.com/2017.3.1026/js/kendo.all.min.js"></script>
-	<script src="https://code.highcharts.com/highcharts.js"></script>
 	<style type="text/css" media="screen">
 		.k-grid td{
 			padding:10px;
@@ -48,6 +47,12 @@
 		</div>
 	</nav>
 	<div class="container">
+		<div >
+		
+		{% if validation %}
+			<div class="alert alert-danger">The image is of unsupported file type, allowed file types are '.jpg', '.jpeg' and '.png'</div>
+	    {% endif %}
+
 		<div class="row">
 			<div class="col-md-6">
 				<div id="items-grid"></div>
@@ -96,8 +101,8 @@
 					select: "select"
 				},
 				validation: {
-					allowedExtensions: [".jpg", ".png", ".jpeg"],
-				}
+                   allowedExtensions: [".jpg", ".png", ".jpeg"],
+               	}
 			});
 
 			$("#items-grid").kendoGrid({
