fix grid issues

--- a/tensorflow_api/templates/tensorflow_api/index.html
+++ b/tensorflow_api/templates/tensorflow_api/index.html
@@ -116,6 +116,7 @@
 				filterable: true,
 				pageable: {
 					pageSizes:[10,20,50, "all"],
+					buttonCount: 3,
 				},
 				groupable:true,
 				sortable: true,
